Updated code to cover test edge cases and added global exception handler